0030706: Visualization - fetch font folder list from fontconfig library on Linux

vfont command now prints fonts in alphabetical order.